[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/powerups/art/powerup_base.png" type="Texture" id=1]
[ext_resource path="res://player/powerups/PowerupBase.gd" type="Script" id=2]
[ext_resource path="res://player/powerups/audio/collect_powerup.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.5543

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 20.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_random = 0.5

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "fade in"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IdleParticles:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IdleParticles:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="PowerupBase" type="Area2D" groups=[
"powerups",
]]
collision_layer = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="IdleParticles" type="Particles2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )
amount = 20
preprocess = 5.0
process_material = SubResource( 2 )

[node name="CollectParticles" type="Particles2D" parent="."]
emitting = false
amount = 50
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Fade" type="AnimationPlayer" parent="."]
"anims/fade in" = SubResource( 6 )
"anims/fade out" = SubResource( 7 )

[node name="StayTime" type="Timer" parent="."]
wait_time = 5.0

[node name="PowerupTime" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="StayTime" to="." method="_on_StayTime_timeout"]
[connection signal="timeout" from="PowerupTime" to="." method="_on_PowerupTime_timeout"]
